<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KPaul2"
    style="@style/father">
<TextView
    android:id="@+id/feedback_points"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    style="@style/father"/>
    <TextView
        style="@style/father"
        android:id="@+id/feedback_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/feedback_points"
        app:layout_constraintRight_toRightOf="@id/feedback_points"
        app:layout_constraintLeft_toLeftOf="@id/feedback_points"
        android:text="@string/evaluation"/>
    <TextView
        style="@style/child"
        android:id="@+id/feedback_correction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/feedback_points"
        app:layout_constraintLeft_toLeftOf="@id/feedback_points"
        app:layout_constraintRight_toRightOf="@id/feedback_points"
        android:text="@string/correction"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/evaluator_name_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/evaluator_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/evaluator_name"
        app:layout_constraintRight_toLeftOf="@id/evaluator_status_header"/>
    <TextView
        android:id="@+id/evaluator_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/feedback_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/evaluator_status"/>
    <TextView
        android:id="@+id/evaluator_status_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/evaluator_status"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/evaluator_status"
        app:layout_constraintLeft_toRightOf="@id/evaluator_name_header"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/evaluator_status"
        app:layout_constraintBottom_toTopOf="@id/feedback_header"
        app:layout_constraintLeft_toRightOf="@id/evaluator_name"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>